Bug 871177.  Fix rooting hazard in IsNotDateOrRegexp.  r=smaug